@@ -36,7 +36,13 @@ $cfg = {
 			'num' => 2,
 			'rc' => 2,
 			'benchmark_rc' => 2,
-			}
+			},
+			{
+			'num' => 3,
+			'rc' => 2,
+			'benchmark_rc' => 2,
+			'ignore' => 'testing ignore',
+			},
 		]
 		},
     ],
