@@ -53,7 +53,7 @@ $cfg = {
 
 
     #DATABASE
-    , 'dbdb'             => 'pigtest2'
+    , 'dbdb'             => 'pigtest'
     , 'dbuser'           => 'pigtester'
     , 'dbowner'      => 'hadoopqa'
     , 'dbgroup'      => 'users'
