@@ -24,6 +24,9 @@ INCOMPATIBLE CHANGES
 
 IMPROVEMENTS
 
+PIG-2108 e2e test harness needs to be able to mark certain tests as ignored
+		(gates)
+
 PIG-1825: ability to turn off the write ahead log for pig's HBaseStorage (billgraham via dvryaboy)
 
 PIG-1772: Pig 090 Documentation (chandec via olgan)
